--- a/public/undangan.html
+++ b/public/undangan.html
@@ -69,7 +69,7 @@
             left: 0;
             width: 100%;
             height: 120px;
-            overflow: visible;
+            overflow: hideen;
             line-height: 0;
         }
 
@@ -79,6 +79,7 @@
             display: block;
             width: 200%;
             height: 250px;
+            overflow: hideen;
         }
 
         .wave1 { bottom: -5px; }
@@ -569,3 +570,4 @@
 </body>
 
 </html>
+
