--- a/public/undangan.html
+++ b/public/undangan.html
@@ -69,7 +69,7 @@
             left: 0;
             width: 100%;
             height: 120px;
-            overflow: hideen;
+            overflow: hidden;
             line-height: 0;
         }
 
@@ -570,5 +570,6 @@
 </body>
 
 </html>
+
 
 
