--- a/public/undangan.html
+++ b/public/undangan.html
@@ -75,7 +75,7 @@
             left: 0;
             width: 100%;
             height: 120px;
-            overflow: visible;
+            overflow: hidden;
             line-height: 0;
         }
 
@@ -83,7 +83,7 @@
             position: absolute;
             left: 0;
             display: block;
-            width: 200%;
+            width: 100%;
             height: 250px;
         }
 
@@ -633,3 +633,4 @@
 </body>
 
 </html>
+
