--- a/public/undangan.html
+++ b/public/undangan.html
@@ -76,6 +76,7 @@
             width: 100%;
             height: 120px;
             line-height: 0;
+            overflow: hidden;
         }
 
         .wave-bottom svg {
@@ -633,6 +634,7 @@
 </body>
 
 </html>
+
 
 
 
