--- a/public/undangan.html
+++ b/public/undangan.html
@@ -73,8 +73,9 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 120px;
+            height: 250px;
             line-height: 0;
+            overflow: hidden;
         }
 
         .wave-bottom svg {
@@ -632,6 +633,7 @@
 </body>
 
 </html>
+
 
 
 
