--- a/public/undangan.html
+++ b/public/undangan.html
@@ -361,32 +361,23 @@
             <h2 class="mb-5 text-black" style="text-shadow: 0 2px 6px rgba(0,0,0,0.7); font-size: 2rem;">
                 Profil Mempelai
             </h2>
-
+    
             <div class="row justify-content-center g-4">
                 <!-- Mempelai Pria -->
-                <div class="col-12 col-sm-6 d-flex flex-column align-items-center">
+                <div class="col-6 col-md-6 d-flex flex-column align-items-center">
                     <div class="card position-relative w-100 mb-3"
                         style="max-width: 300px; height: 300px; border-radius: 1rem; overflow: hidden; box-shadow: 0 8px 20px rgba(0,0,0,0.3);">
-
-                        <!-- Foto Background -->
                         <img src="/images/pria.jpg" class="card-img" style="object-fit: cover; height: 100%;">
-
-                        <!-- BG Kertas di bawah -->
                         <div style="position: absolute; bottom: 0; left: 0; width: 100%; height: 120px; 
                                     background: url('/images/bg-666.png') center bottom / contain no-repeat;">
                         </div>
-
-                        <!-- Overlay Nama (panggilan) -->
                         <div
                             style="position: absolute; bottom: 20px; left: 0; width: 100%; text-align: center; padding: 0 10px;">
-                            <h2
-                                style="color: #000; text-shadow: 0 2px 6px rgba(0,0,0,0.7); font-size: 1.5rem; margin: 0;">
+                            <h2 style="color: #000; text-shadow: 0 2px 6px rgba(0,0,0,0.7); font-size: 1.5rem; margin: 0;">
                                 Hamzah
                             </h2>
                         </div>
                     </div>
-
-                    <!-- Nama Lengkap & Keterangan di luar card -->
                     <div class="text-center">
                         <h2
                             style="font-size: 1.5rem; font-weight: bold; margin: 0; color: #000; text-shadow: 0 1px 6px rgba(0,0,0,0.7);">
@@ -398,33 +389,23 @@
                         </p>
                     </div>
                 </div>
-
+    
                 <!-- Mempelai Wanita -->
-                <div class="col-12 col-sm-6 d-flex flex-column align-items-center">
+                <div class="col-6 col-md-6 d-flex flex-column align-items-center">
                     <div class="card position-relative w-100 mb-3"
                         style="max-width: 300px; height: 300px; border-radius: 1rem; overflow: hidden; box-shadow: 0 8px 20px rgba(0,0,0,0.3);">
-
-                        <!-- Foto Background -->
                         <img src="/images/wanita.jpg" class="card-img"
                             style="object-fit: cover; width: 100%; height: 100%;">
-
-                        <!-- BG Kertas di bawah -->
                         <div style="position: absolute; bottom: 0; left: 0; width: 100%; height: 120px; 
                                     background: url('/images/bg-666.png') center bottom / contain no-repeat;">
                         </div>
-
-                        <!-- Overlay Nama (panggilan) -->
                         <div
                             style="position: absolute; bottom: 20px; left: 0; width: 100%; text-align: center; padding: 0 10px;">
-                            <h2
-                                style="color: #000; text-shadow: 0 2px 6px rgba(0,0,0,0.7); font-size: 1.5rem; margin: 0;">
+                            <h2 style="color: #000; text-shadow: 0 2px 6px rgba(0,0,0,0.7); font-size: 1.5rem; margin: 0;">
                                 Naila
                             </h2>
                         </div>
                     </div>
-
-
-                    <!-- Nama Lengkap & Keterangan di luar card -->
                     <div class="text-center">
                         <h2
                             style="font-size: 1.5rem; font-weight: bold; margin: 0; color: #000; text-shadow: 0 2px 6px rgba(0,0,0,0.7);">
@@ -633,6 +614,7 @@
 </body>
 
 </html>
+
 
 
 
