--- a/public/undangan.html
+++ b/public/undangan.html
@@ -26,7 +26,7 @@
             font-family: 'Montserrat', sans-serif;
             transition: background-image 1s ease-in-out;
             /* fade halus antar gambar */
-            background: url('/images/bg-2.jpg') center/cover no-repeat fixed;
+            background: url('/images/bg-2.jpg') center/cover no-repeat scroll;
         }
 
         /* Background Parallax */
@@ -614,6 +614,7 @@
 </body>
 
 </html>
+
 
 
 
