--- a/public/undangan.html
+++ b/public/undangan.html
@@ -25,9 +25,7 @@
             overflow-x: hidden;
             font-family: 'Montserrat', sans-serif;
             transition: background-image 1s ease-in-out;
-            /* fade halus antar gambar */
-            background: url('/images/bg-2.jpg') center/cover no-repeat scroll;
-        }
+            /* fade halus antar gambar */        }
 
         /* Background Parallax */
         .hero-section {
@@ -65,7 +63,7 @@
 
         /* Background bunga fixed */
         .bg-fixed-full {
-            background: url('/images/bungafull.png') center/cover no-repeat fixed;
+            background: url('/images/bungafull.png') center/cover no-repeat fixed, url('/images/bg-2.jpg') center/cover no-repeat fixed;
         }
 
         .wave-bottom {
@@ -73,7 +71,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 250px;
+            height: 200px;
             line-height: 0;
             overflow: hidden;
         }
@@ -212,7 +210,7 @@
 
         @media (max-width: 576px) {
             .card-map {
-                width: 90% !important;
+                width: 80% !important;
                 /* mengecil otomatis di HP */
                 height: 380px !important;
             }
@@ -423,6 +421,7 @@
 
 
 
+
     <!-- =================== SECTION 3: SAVE THE DATE =================== -->
     <section class="text-center d-flex flex-column justify-content-center align-items-center py-5"
         style="background: url('/images/bg-144.png') center/cover no-repeat; background-size: cover; height: 500px; color: black;">
@@ -609,17 +608,6 @@
     </script>
 
 
-
-
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
