--- a/public/undangan.html
+++ b/public/undangan.html
@@ -25,7 +25,9 @@
             overflow-x: hidden;
             font-family: 'Montserrat', sans-serif;
             transition: background-image 1s ease-in-out;
-            /* fade halus antar gambar */        }
+            /* fade halus antar gambar */
+            background: url('/images/bg-2.jpg') center center / cover no-repeat fixed;
+        }
 
         /* Background Parallax */
         .hero-section {
@@ -58,12 +60,6 @@
                 opacity: 1;
                 transform: translateY(0);
             }
-        }
-
-
-        /* Background bunga fixed */
-        .bg-fixed-full {
-            background: url('/images/bungafull.png') center/cover no-repeat fixed, url('/images/bg-2.jpg') center/cover no-repeat fixed;
         }
 
         .wave-bottom {
