--- a/public/undangan.html
+++ b/public/undangan.html
@@ -290,18 +290,18 @@
         @media (max-width: 768px) {
             .doa2-section {
                 padding: 170px 20px;       /* jauh lebih rapat */
-                background-size: 80%;    /* perbesar sedikit biar tidak kosong */
+                background-size: 80% 150%;    /* perbesar sedikit biar tidak kosong */
                 min-height: 500px;        /* supaya tetap proporsional */
             }
 
             .doa2-section p {
-                font-size: 15px;
+                font-size: 12px;
                 line-height: 1.7;
                 padding: 0 80px;    /* biar teks tidak terlalu mepet */
             }
 
             .doa2-section h2 {
-                font-size: 28px;
+                font-size: 25px;
             }
         }
 
