--- a/public/undangan.html
+++ b/public/undangan.html
@@ -289,7 +289,7 @@
         /* --- Versi Mobile --- */
         @media (max-width: 768px) {
             .doa2-section {
-                padding: 170px 20px;       /* jauh lebih rapat */
+                padding: 150px 20px;       /* jauh lebih rapat */
                 background-size: 90% 80%;    /* perbesar sedikit biar tidak kosong */
                 min-height: 500px;        /* supaya tetap proporsional */
             }
@@ -297,7 +297,7 @@
             .doa2-section p {
                 font-size: 12px;
                 line-height: 1.7;
-                padding-top: 70px;    /* biar teks tidak terlalu mepet */
+                padding-top: 5px;    /* biar teks tidak terlalu mepet */
             }
 
             .doa2-section h2 {
@@ -453,6 +453,7 @@
                             </h2>
                         </div>
                     </div>
+                    <div>&</div>
                     <div class="text-center">
                         <h2
                             style="font-size: 1.5rem; font-weight: bold; margin: 0; color: #000; text-shadow: 0 1px 6px rgba(0,0,0,0.7);">
@@ -484,7 +485,7 @@
                             Naila Farah, S.Pd
                         </h2>
                         <p style="font-size: 0.95rem; margin: 0.25rem 0 0; color: #000; text-shadow: 0 1px 4px rgba(0,0,0,0.6);">
-                            Putri dari Bapak Suyanto & Ibu Rukoyah
+                            Putri dari Bapak Asan Nuryanto & Ibu Rukoyah
                         </p>
                     </div>
                 </div>
