--- a/public/undangan.html
+++ b/public/undangan.html
@@ -289,15 +289,15 @@
         /* --- Versi Mobile --- */
         @media (max-width: 768px) {
             .doa2-section {
-                padding: 150px 20px;       /* jauh lebih rapat */
-                background-size: 90% 80%;    /* perbesar sedikit biar tidak kosong */
+                padding: 120px 20px;       /* jauh lebih rapat */
+                background-size: 90% 90%;    /* perbesar sedikit biar tidak kosong */
                 min-height: 500px;        /* supaya tetap proporsional */
             }
 
             .doa2-section p {
                 font-size: 12px;
                 line-height: 1.7;
-                padding-top: 5px;    /* biar teks tidak terlalu mepet */
+                padding-top: 10px;    /* biar teks tidak terlalu mepet */
             }
 
             .doa2-section h2 {
@@ -453,7 +453,6 @@
                             </h2>
                         </div>
                     </div>
-                    <div>&</div>
                     <div class="text-center">
                         <h2
                             style="font-size: 1.5rem; font-weight: bold; margin: 0; color: #000; text-shadow: 0 1px 6px rgba(0,0,0,0.7);">
@@ -465,6 +464,9 @@
                     </div>
                 </div>
                 
+                <h2 style="font-size: 1.5rem; font-weight: bold; margin: 0; color: #000; text-shadow: 0 1px 6px rgba(0,0,0,0.7);">
+                    &
+                </h2>
                 <!-- Mempelai Wanita -->
                 <div class="col-12 col-md-6 d-flex flex-column align-items-center">
                     <div class="card position-relative w-100 mb-3"
