--- a/public/undangan.html
+++ b/public/undangan.html
@@ -289,7 +289,7 @@
         /* --- Versi Mobile --- */
         @media (max-width: 768px) {
             .doa2-section {
-                padding: 130px 20px;       /* jauh lebih rapat */
+                padding: 140px 20px;       /* jauh lebih rapat */
                 background-size: 90% 90%;    /* perbesar sedikit biar tidak kosong */
                 min-height: 500px;        /* supaya tetap proporsional */
             }
@@ -297,7 +297,7 @@
             .doa2-section p {
                 font-size: 12px;
                 line-height: 1.7;
-                padding-top: 10px;    /* biar teks tidak terlalu mepet */
+                padding: 10px;    /* biar teks tidak terlalu mepet */
             }
 
             .doa2-section h2 {
